--- a/compose/04/compose.yml
+++ b/compose/04/compose.yml
@@ -1,21 +1,22 @@
-version: '3.7'
-
+version: "3"
 services:
+
   redis:
     image: redis:alpine
-    ports:
-      - "6379"
     networks:
       - frontend
     deploy:
-      replicas: 2
+      replicas: 1
       update_config:
         parallelism: 2
         delay: 10s
       restart_policy:
         condition: on-failure
   db:
-    image: portgres:9.4
+    image: postgres:9.4
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
     volumes:
       - db-data:/var/lib/postgresql/data
     networks:
@@ -38,7 +39,7 @@ services:
       restart_policy:
         condition: on-failure
   result:
-    image: dockersamples/examplevotingapp_result:defore
+    image: dockersamples/examplevotingapp_result:before
     ports:
       - 5001:80
     networks:
@@ -52,11 +53,15 @@ services:
         delay: 10s
       restart_policy:
         condition: on-failure
+
   worker:
     image: dockersamples/examplevotingapp_worker
     networks:
       - frontend
       - backend
+    depends_on:
+      - db
+      - redis
     deploy:
       mode: replicated
       replicas: 1
@@ -68,6 +73,7 @@ services:
         window: 120s
       placement:
         constraints: [ node.role == manager ]
+
   visualizer:
     image: dockersamples/visualizer:stable
     ports:
@@ -77,9 +83,11 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     deploy:
       placement:
-        constraints: [ node.role==manager ]
+        constraints: [ node.role == manager ]
+
 networks:
   frontend:
   backend:
+
 volumes:
   db-data:
